fix: inluding new kind ephemeral-32-tex

--- a/app/translations/ru.json
+++ b/app/translations/ru.json
@@ -533,6 +533,7 @@
     "receiving": "...Получение... ",
     "sendingtoself": "...Отправка себе... ",
     "shielding": "...экранирование...",
+    "ephemeral320tex": "Эфемерный-320-Tex",
     "time": "Время",
     "confirmations": "Подтверждения",
     "txid": "Идентификатор транзакции",
