--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -533,6 +533,7 @@
     "receiving": "...Receiving... ",
     "sendingtoself": "...Sending-to-Self... ",
     "shielding": "...Shielding...",
+    "ephemeral320tex": "Ephemeral-320-Tex",
     "time": "Time",
     "confirmations": "Confirmations",
     "txid": "Transaction ID",
