--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -533,6 +533,7 @@
     "receiving": "...Recibiendo... ",
     "sendingtoself": "...Auto-Enviando... ",
     "shielding":"...Blindando...",
+    "ephemeral320tex": "Efímera-320-Tex",
     "time": "Hora",
     "confirmations": "Confirmaciones",
     "txid": "Transacción ID",
