--- a/app/translations/pt.json
+++ b/app/translations/pt.json
@@ -533,6 +533,7 @@
     "receiving": "...Recebendo... ",
     "sendingtoself": "...Enviando-si-Mesmo... ",
     "shielding": "...Blindagem...",
+    "ephemeral320tex": "Efêmero-320-Tex",
     "time": "Tempo",
     "confirmations": "Confirmações",
     "txid": "ID da Transação",
