--- a/app/translations/pt.json
+++ b/app/translations/pt.json
@@ -96,8 +96,8 @@
     "serversecondtry": "Não parece haver nenhum problema com o servidor. Algo mais está acontecendo.",
     "alert-donation-title": "APOIAR A ZINGOLABS",
     "alert-donation-body": "Você quer ajudar o ZingoLabs a tornar o Zcash mais útil? Opte por dar uma gorjeta de um Zenny (0.01 ZEC) para ZingoLabs em cada transação! Se sim, pressione confirmar, caso contrário, pressione Cancelar.",
-    "recoverseed": "Recuperar a última Frases de Recuperação usada",
-    "recoverseedinstall": "Recuperou a última Frases de Recuperação usada neste dispositivo:",
+    "recoverkeys": "Recuperar a última Clave de Recuperação usada",
+    "recoverkeysinstall": "Recuperou a última Clave de Recuperação usada neste dispositivo:",
     "noservers": "Nenhum dos servidores da lista está disponível, provavelmente é um erro de conexão."
   },
   "loadedapp": {
