--- a/app/translations/ru.json
+++ b/app/translations/ru.json
@@ -96,9 +96,9 @@
     "serversecondtry": "Похоже, что с этим сервером нет никаких проблем. Проблема в чём-то другом.",
     "alert-donation-title": "ПОДДЕРЖИВАЕМЫЕ ZINGOLABS",
     "alert-donation-body": "Хотите помочь ZingoLabs сделать Zcash более полезным? Подпишитесь на чаевые в размере одного Zenny (0.01 ZEC) в пользу ZingoLabs за каждую транзакцию! Если да, нажмите «Подтвердить», в противном случае нажмите «Отмена».",
-    "recoverseed": "Восстановить последнюю использованную исходную фразу",
-    "noservers": "Ни один из серверов в списке недоступен, возможно, это ошибка подключения.",
-    "recoverseedinstall": "Восстановлена ​​последняя исходная фраза, использованная на этом устройстве:"
+    "recoverkeys": "Восстановить последнюю использованную исходную фразу",
+    "recoverkeysinstall": "Восстановлена ​​последняя исходная фраза, использованная на этом устройстве:",
+    "noservers": "Ни один из серверов в списке недоступен, возможно, это ошибка подключения."
   },
   "loadedapp": {
     "about": "О Zingo",
