fix: new calculated status of Value Transfers

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -558,6 +558,7 @@
     "address-https": "Zingo-Authenticated Address",
     "type": "Type",
     "not-confirmed": "Transaction not yet confirmed",
+    "calculated": "Calculated",
     "transmitted": "Transmitted",
     "mempool": "In Mempool"
   },
