--- a/app/translations/ru.json
+++ b/app/translations/ru.json
@@ -33,7 +33,8 @@
   "subject": "Поддержка Зинго...",
   "body": "мне нужна помощь с...",
   "messages": {
-    "title": "Сообщения"
+    "title": "Сообщения",
+    "empty": "Сообщений пока нет."
   },
   "addressbook": {
     "title": "Адресная книга",
