--- a/app/translations/pt.json
+++ b/app/translations/pt.json
@@ -534,7 +534,7 @@
     "receiving": "...Recebendo... ",
     "sendingtoself": "...Enviando-si-Mesmo... ",
     "shielding": "...Blindagem...",
-    "ephemeral320tex": "Efêmero-320-Tex",
+    "rejection": "Rejeição",
     "time": "Tempo",
     "confirmations": "Confirmações",
     "txid": "ID da Transação",
