--- a/app/translations/ru.json
+++ b/app/translations/ru.json
@@ -534,7 +534,7 @@
     "receiving": "...Получение... ",
     "sendingtoself": "...Отправка себе... ",
     "shielding": "...экранирование...",
-    "ephemeral320tex": "Эфемерный-320-Tex",
+    "rejection": "Отказ",
     "time": "Время",
     "confirmations": "Подтверждения",
     "txid": "Идентификатор транзакции",
