fix: initial work for offline mode

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -278,9 +278,11 @@
     "server-auto": "Automatic",
     "server-list": "List",
     "server-custom": "Custom",
+    "server-offline": "Offline",
     "server-auto-text": "The next time the application starts, it will calculate which is the best server in the list and make it active.",
     "server-list-text": "Select a server from the list.",
     "server-custom-text": "Fill in the information of the server you want to use.",
+    "server-offline-text": "The App will work with no server connection.",
     "threshold-title": "TRANSACTION FILTER THRESHOLD",
     "number": "Number...",
     "memo-title": "MEMO DOWNLOAD",
