--- a/app/translations/ru.json
+++ b/app/translations/ru.json
@@ -278,9 +278,11 @@
     "server-auto": "Автоматический выбор",
     "server-list": "Список",
     "server-custom": "Свой",
+    "server-offline": "оффлайн",
     "server-auto-text": "При следующем запуске приложения будет выбран и активирован ближайший сервер из этого списка.",
     "server-list-text": "Выберите сервер из списка.",
     "server-custom-text": "Укажите информацию о сервере, который вы хотите использовать.",
+    "server-offline-text": "Приложение будет работать без подключения к серверу.",
     "threshold-title": "ПОРОГ ФИЛЬТРА ТРАНЗАКЦИЙ",
     "number": "Число...",
     "memo-title": "СКАЧАТЬ ЗАМЕТКУ",
