--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -278,9 +278,11 @@
     "server-auto": "Automático",
     "server-list": "Lista",
     "server-custom": "Personalizado",
+    "server-offline": "Offline",
     "server-auto-text": "La próxima vez que la aplicación se inicie, calculará cuál es el mejor servidor de la lista y lo hará activo.",
     "server-list-text": "Selecciona un servidor de la lista.",
     "server-custom-text": "Rellena la informacion del servidor que quieres usar.",
+    "server-offline-text": "La aplicación funcionará sin conexión a ningún servidor.",
     "threshold-title": "UMBRAL PARA EL FILTRO DE TRANSACCIONES",
     "number": "Número...",
     "memo-title": "DESCARGAR MEMOS",
