--- a/app/translations/pt.json
+++ b/app/translations/pt.json
@@ -278,9 +278,11 @@
     "server-auto": "Automático",
     "server-list": "Lista",
     "server-custom": "Personalizado",
+    "server-offline": "Off-line",
     "server-auto-text": "Na próxima vez que o aplicativo for iniciado, ele calculará qual é o melhor servidor da lista e o ativará.",
     "server-list-text": "Selecione um servidor na lista.",
     "server-custom-text": "Preencha as informações do servidor que deseja usar.",
+    "server-offline-text": "O aplicativo funcionará sem conexão com o servidor.",
     "threshold-title": "LIMITE DO FILTRO DAS TRANSAÇÕES",
     "number": "Número...",
     "memo-title": "BAIXAR MEMOS",
