--- a/app/translations/ru.json
+++ b/app/translations/ru.json
@@ -139,7 +139,7 @@
     "messages-menu": "СООБЩЕНИЯ",
     "syncing": "Приостановка синхронизации для завершения транзакции.",
     "zcash-url": "У вас уже есть адрес на экране отправки",
-    "connection-error": "Нет подключения к Интернету, Zingo не может работать надлежащим образом.",
+    "connection-error": "Для выполнения этой опции требуется подключение к Интернету.",
     "tryingnewserver": "Попытка подключиться к новому серверу... Займёт несколько секунд.",
     "tryingnewserver-error": "Новый сервер не ответил в течение 30 секунд.",
     "readingwallet": "Успешное соединение с этим сервером:",
