--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -139,7 +139,7 @@
     "messages-menu": "MESSAGES",
     "syncing": "Pausing the Synchronization to be able to Complete the Transaction.",
     "zcash-url": "You already have an address in the send screen",
-    "connection-error": "No Internet connection, Zingo can't work properly this way.",
+    "connection-error": "This option requires an internet connection to be executed.",
     "tryingnewserver": "Trying to connect to the new Server... Can take a few seconds.",
     "tryingnewserver-error": "After 30 seconds the new server doesn't respond.",
     "readingwallet": "Reading successfully the wallet with the server:",
