--- a/app/translations/pt.json
+++ b/app/translations/pt.json
@@ -139,7 +139,7 @@
     "messages-menu": "MENSAGENS",
     "syncing": "Pausando a sincronização para concluir a transação.",
     "zcash-url": "Você já possui um endereço na tela de envio",
-    "connection-error": "Sem conexão com a Internet, a Zingo não consegue funcionar corretamente desta forma.",
+    "connection-error": "Esta opção requer uma conexão com a Internet para ser executada.",
     "tryingnewserver": "Tentando conectar-se ao novo servidor... Pode levar alguns segundos.",
     "tryingnewserver-error": "Após 30 segundos o novo servidor não responde.",
     "readingwallet": "Lendo com sucesso a carteira atual com o servidor:",
