--- a/app/translations/ru.json
+++ b/app/translations/ru.json
@@ -152,7 +152,8 @@
     "valuetransfer-confirmed": "Транзакция подтверждена\n",
     "payment-made": "Платеж произведен\n",
     "valuetransfer-reverted": "Транзакция так и не была подтверждена валидатором.",
-    "email-error": "Ошибка открытия почтового клиента"
+    "email-error-title": "Ошибка открытия почтового клиента",
+    "email-error-body": "Перейдите в настройки вашего устройства и установите почтовое приложение по умолчанию для отправки отчета."
   },
   "rpc": {
     "parsebirthday-error": "Ошибка: Невозможно распознать как число:",
