--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -152,7 +152,8 @@
     "valuetransfer-confirmed": "Transaction confirmed\n",
     "payment-made": "Payment made\n",
     "valuetransfer-reverted": "The transaction was never confirmed by a validator.",
-    "email-error": "Error opening email client"
+    "email-error-title": "Error opening email client",
+    "email-error-body": "Go to your device's Settings and set a default email application to send the report."
   },
   "rpc": {
     "parsebirthday-error": "Error: Couldn't parse as a number:",
